// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataOverlayDataRow Markdown should render markdown row for overlay panel correctly 1`] = `
<div>
  <div
    class="markdown-row panel-row"
  >
    <h1>
      content
    </h1>
  </div>
</div>
`;

exports[`DataOverlayDataRow Markdown should render markdown row for text annotation correctly 1`] = `
<div>
  <div
    class="markdown-row annotation-row"
  >
    <h1>
      content
    </h1>
  </div>
</div>
`;
